@@ -5,6 +5,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.havadurumu.backend.dto.GirdiVerisi;
 import com.havadurumu.backend.dto.TahminCiktisi;
+import com.havadurumu.backend.dto.ProphetGunlukTahminDto; // YENİ DTO
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -14,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
+import java.util.Collections;
 
 @Service
 public class YapayZekaTahminService {
@@ -28,9 +30,10 @@ public class YapayZekaTahminService {
         this.objectMapper = new ObjectMapper();
     }
 
+    // Mevcut saatlik tahmin metodu
     public List<TahminCiktisi> getYapayZekaTahmini(List<GirdiVerisi> sonSaatlerinVerisi) {
         try {
-            System.out.println("=== YAPAY ZEKA SERVİSİ DEBUG ===");
+            System.out.println("=== YAPAY ZEKA SAATLİK SERVİSİ DEBUG ===");
             System.out.println("Gelen veri sayısı: " + sonSaatlerinVerisi.size());
             
             // İlk 3 kayıdı logla
@@ -46,7 +49,7 @@ public class YapayZekaTahminService {
             // HTTP Body
             HttpEntity<List<GirdiVerisi>> requestEntity = new HttpEntity<>(sonSaatlerinVerisi, headers);
             
-            System.out.println("RestTemplate ile istek gönderiliyor: " + PYTHON_API_URL_SAATLIK);
+            System.out.println("RestTemplate ile saatlik istek gönderiliyor: " + PYTHON_API_URL_SAATLIK);
             
             // POST isteği gönder
             ResponseEntity<TahminCiktisi[]> response = restTemplate.exchange(
@@ -60,7 +63,7 @@ public class YapayZekaTahminService {
             
             if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
                 TahminCiktisi[] tahminArray = response.getBody();
-                System.out.println("Alınan tahmin sayısı: " + tahminArray.length);
+                System.out.println("Alınan saatlik tahmin sayısı: " + tahminArray.length);
                 
                 // Array'i listeye çevir
                 List<TahminCiktisi> result = List.of(tahminArray);
@@ -68,22 +71,73 @@ public class YapayZekaTahminService {
                 // İlk tahmini logla
                 if (!result.isEmpty()) {
                     TahminCiktisi ilk = result.get(0);
-                    System.out.println("İlk tahmin: " + ilk.getDs() + " | Sıcaklık: " + ilk.getYhat());
+                    System.out.println("İlk saatlik tahmin: " + ilk.getDs() + " | Sıcaklık: " + ilk.getYhat());
                 }
                 
                 return result;
             } else {
                 System.err.println("AI SAATLİK servisinden hatalı yanıt: " + response.getStatusCode());
-                return List.of();
+                return Collections.emptyList();
             }
             
         } catch (Exception e) {
-            System.err.println("YAPAY ZEKA SERVİSİ HATASI: " + e.getMessage());
+            System.err.println("YAPAY ZEKA SAATLİK SERVİSİ HATASI: " + e.getMessage());
             e.printStackTrace();
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
+    // YENİ: Günlük tahmin metodu (parametre almıyor çünkü Python API'si öyle)
+    public List<ProphetGunlukTahminDto> getGunlukYapayZekaTahmini() throws Exception {
+        try {
+            System.out.println("=== YAPAY ZEKA GÜNLÜk SERVİSİ DEBUG ===");
+            
+            HttpHeaders headers = new HttpHeaders();
+            headers.setContentType(MediaType.APPLICATION_JSON);
+            
+            // Boş body ile POST isteği (Python API'niz öyle bekliyor)
+            HttpEntity<String> requestEntity = new HttpEntity<>("{}", headers);
+            
+            System.out.println("RestTemplate ile günlük istek gönderiliyor: " + PYTHON_API_URL_GUNLUK);
+            
+            ResponseEntity<ProphetGunlukTahminDto[]> response = restTemplate.exchange(
+                PYTHON_API_URL_GUNLUK,
+                HttpMethod.POST,
+                requestEntity,
+                ProphetGunlukTahminDto[].class
+            );
+            
+            System.out.println("Günlük HTTP yanıt kodu: " + response.getStatusCode());
+            
+            if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
+                ProphetGunlukTahminDto[] gunlukArray = response.getBody();
+                System.out.println("Alınan günlük tahmin sayısı: " + gunlukArray.length);
+                
+                List<ProphetGunlukTahminDto> result = List.of(gunlukArray);
+                
+                // İlk günlük tahmini logla
+                if (!result.isEmpty()) {
+                    ProphetGunlukTahminDto ilk = result.get(0);
+                    System.out.println("İlk günlük tahmin: " + ilk.getGun() + 
+                                     " | Min: " + ilk.getEnDusuk() + 
+                                     " | Max: " + ilk.getEnYuksek());
+                }
+                
+                return result;
+            } else {
+                System.err.println("AI GÜNLÜk servisinden hatalı yanıt: " + response.getStatusCode());
+                throw new RuntimeException("Günlük AI servisi hata: " + response.getStatusCode());
+            }
+            
+        } catch (Exception e) {
+            System.err.println("YAPAY ZEKA GÜNLÜk SERVİSİ HATASI: " + e.getMessage());
+            e.printStackTrace();
+            throw new Exception("Günlük AI servisi hatası: " + e.getMessage());
+        }
+    }
+
+    // DEPRECATED: Eski günlük metod (parametre alıyordu)
+    @Deprecated
     public List<TahminCiktisi> getGunlukYapayZekaTahmini(List<GirdiVerisi> sonGunlerinVerisi) throws Exception {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
